Added ReadMe and deleted Valentine folder

--- a/index.html
+++ b/index.html
@@ -6,7 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="/style.css" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
+        integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous" />
     <title>Ashley Anderson Portfolio</title>
+
 </head>
 
 <body>
@@ -17,21 +23,31 @@
             <li><a href="#contact">Contact</a></li>
         </ul>
     </nav>
+
     <section id="welcome-section">
         <h1>Welcome to my Portfolio!</h1>
     </section>
     <section id="projects">
         <a href="/valentine/index.html">
-        <figure class="project-tile">
-            <img src="Images pt2./pokeball.jpg" />
-            <figcaption>Project captions goes here.</figcaption>
-        </figure>
-    </a>
+            <figure class="project-tile">
+                <img src="Images pt2./pokeball.jpg" />
+                <figcaption>Project captions goes here.</figcaption>
+            </figure>
+        </a>
 
     </section>
     <section id="contact">
-<h2> Let's work together!</h2>
-
+        <h2> Let's work together!</h2>
+<div class="contactlinks"> 
+<a id="profile-link" href="" target="_blank"><i class="fab fa-github">GitHub</i>
+</a>
+<a id="profile-link" href="" target="_blank"><i class="fab fa-facebook-square">Facebook</i>
+</a>
+<a id="profile-link" href="" target="_blank"><i class="fab fa-twitter">Twitter</i>
+</a>
+<a id="profile-link" href="" target="_blank"><i class="fas fa-at">Email</i>
+</a>
+</div>
     </section>
     <footer>
         <p>**This is just a fake portfolio. All the projects and contact details given
