--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <h1>Welcome to my Portfolio!</h1>
     </section>
     <section id="projects">
-        <a href="/valentine/index.html">
+        <a href="">
             <figure class="project-tile">
                 <img src="Images pt2./pokeball.jpg" />
                 <figcaption>Project captions goes here.</figcaption>
@@ -39,13 +39,15 @@
     <section id="contact">
         <h2> Let's work together!</h2>
 <div class="contactlinks"> 
-<a id="profile-link" href="" target="_blank"><i class="fab fa-github">GitHub</i>
+<a id="profile-link" href="https://github.com/Asherz96/Personal-Portfolio-pt.-2" target="_blank"><i class="fab fa-github">GitHub</i>
 </a>
 <a id="profile-link" href="" target="_blank"><i class="fab fa-facebook-square">Facebook</i>
 </a>
 <a id="profile-link" href="" target="_blank"><i class="fab fa-twitter">Twitter</i>
 </a>
 <a id="profile-link" href="" target="_blank"><i class="fas fa-at">Email</i>
+</a>
+<a id="profile-link" href="" target="_blank"><i class="fas fa-mobile-alt">Phone</i>
 </a>
 </div>
     </section>
