--- a/index.html
+++ b/index.html
@@ -28,31 +28,63 @@
         <h1>Welcome to my Portfolio!</h1>
     </section>
     <section id="projects">
-        <a href="">
+        <h2>Take a look at some of my projects!</h2>
+        <div class="projecttiles">
+        <a href="#">
             <figure class="project-tile">
                 <img src="Images pt2./pokeball.jpg" />
                 <figcaption>Project captions goes here.</figcaption>
             </figure>
         </a>
-
+        <a href="#">
+            <figure class="project-tile">
+                <img src="Images pt2./pokeball.jpg" />
+                <figcaption>Project captions goes here.</figcaption>
+            </figure>
+        </a>
+        <a href="#">
+            <figure class="project-tile">
+                <img src="Images pt2./pokeball.jpg" />
+                <figcaption>Project captions goes here.</figcaption>
+            </figure>
+        </a>
+        <a href="#">
+            <figure class="project-tile">
+                <img src="Images pt2./pokeball.jpg" />
+                <figcaption>Project captions goes here.</figcaption>
+            </figure>
+        </a>
+        <a href="#">
+            <figure class="project-tile">
+                <img src="Images pt2./pokeball.jpg" />
+                <figcaption>Project captions goes here.</figcaption>
+            </figure>
+        </a>
+        <a href="#">
+            <figure class="project-tile">
+                <img src="Images pt2./pokeball.jpg" />
+                <figcaption>Project captions goes here.</figcaption>
+            </figure>
+        </a>
+    </div>
     </section>
     <section id="contact">
         <h2> Let's work together!</h2>
 <div class="contactlinks"> 
-<a id="profile-link" href="https://github.com/Asherz96/Personal-Portfolio-pt.-2" target="_blank"><i class="fab fa-github">GitHub</i>
+<a id="profile-link" href="https://github.com/Asherz96/Personal-Portfolio-pt.-2" target="_blank" class="btn contact-details"><i class="fab fa-github">GitHub</i>
 </a>
-<a id="profile-link" href="" target="_blank"><i class="fab fa-facebook-square">Facebook</i>
+<a id="profile-link" href="https://www.facebook.com" target="_blank" class="btn contact-details"><i class="fab fa-facebook-square">Facebook</i>
 </a>
-<a id="profile-link" href="" target="_blank"><i class="fab fa-twitter">Twitter</i>
+<a id="profile-link" href="https://twitter.com/?lang=en" target="_blank" class="btn contact-details"><i class="fab fa-twitter">Twitter</i>
 </a>
-<a id="profile-link" href="" target="_blank"><i class="fas fa-at">Email</i>
+<a id="profile-link" href="mailto:example@example.com" target="_blank" class="btn contact-details"><i class="fas fa-at">Email</i>
 </a>
-<a id="profile-link" href="" target="_blank"><i class="fas fa-mobile-alt">Phone</i>
+<a id="profile-link" href="tel:801-523-8035" target="_blank" class="btn contact-details"><i class="fas fa-mobile-alt">Phone</i>
 </a>
 </div>
     </section>
     <footer>
-        <p>**This is just a fake portfolio. All the projects and contact details given
+        <p>** &copy This is just a fake portfolio. All the projects and contact details given
             are not real. All rights reserved.**</p>
     </footer>
 
