Added images, improved layout

--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="/style.css" rel="stylesheet" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
         integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous" />
     <title>Ashley Anderson Portfolio</title>
@@ -25,63 +26,71 @@
     </nav>
 
     <section id="welcome-section">
-        <h1>Welcome to my Portfolio!</h1>
+        <h1>My name is Ashley</h1>
+        <h3>a UX/UI Designer</h3>
     </section>
     <section id="projects">
-        <h2>Take a look at some of my projects!</h2>
+        <h2>Take a look at some of my projects</h2>
         <div class="projecttiles">
-        <a href="#">
-            <figure class="project-tile">
-                <img src="Images pt2./pokeball.jpg" />
-                <figcaption>Project captions goes here.</figcaption>
-            </figure>
-        </a>
-        <a href="#">
-            <figure class="project-tile">
-                <img src="Images pt2./pokeball.jpg" />
-                <figcaption>Project captions goes here.</figcaption>
-            </figure>
-        </a>
-        <a href="#">
-            <figure class="project-tile">
-                <img src="Images pt2./pokeball.jpg" />
-                <figcaption>Project captions goes here.</figcaption>
-            </figure>
-        </a>
-        <a href="#">
-            <figure class="project-tile">
-                <img src="Images pt2./pokeball.jpg" />
-                <figcaption>Project captions goes here.</figcaption>
-            </figure>
-        </a>
-        <a href="#">
-            <figure class="project-tile">
-                <img src="Images pt2./pokeball.jpg" />
-                <figcaption>Project captions goes here.</figcaption>
-            </figure>
-        </a>
-        <a href="#">
-            <figure class="project-tile">
-                <img src="Images pt2./pokeball.jpg" />
-                <figcaption>Project captions goes here.</figcaption>
-            </figure>
-        </a>
-    </div>
+            <a href="#">
+                <figure class="project-tile">
+                    <img src="/Images pt2./Practice Page img.png" />
+                    <figcaption>Interest Page</figcaption>
+                </figure>
+            </a>
+            <a href="#">
+                <figure class="project-tile">
+                    <img src="/Images pt2./pokemon-pc-game-1-900x506.jpg" />
+                    <figcaption>Pokemon Party</figcaption>
+                </figure>
+            </a>
+            <a href="#">
+                <figure class="project-tile">
+                    <img src="Images pt2./games-art-gone-home-minimalism-loading-hd-wallpaper-preview.jpg" />
+                    <figcaption>Project captions goes here.</figcaption>
+                </figure>
+            </a>
+            <a href="#">
+                <figure class="project-tile">
+                    <img src="Images pt2./games-art-gone-home-minimalism-loading-hd-wallpaper-preview.jpg" />
+                    <figcaption>Project captions goes here.</figcaption>
+                </figure>
+            </a>
+            <a href="#">
+                <figure class="project-tile">
+                    <img src="Images pt2./games-art-gone-home-minimalism-loading-hd-wallpaper-preview.jpg" />
+                    <figcaption>Project captions goes here.</figcaption>
+                </figure>
+            </a>
+            <a href="#">
+                <figure class="project-tile">
+                    <img src="Images pt2./games-art-gone-home-minimalism-loading-hd-wallpaper-preview.jpg" />
+                    <figcaption>Project captions goes here.</figcaption>
+                </figure>
+            </a>
+
+        </div>
     </section>
     <section id="contact">
-        <h2> Let's work together!</h2>
-<div class="contactlinks"> 
-<a id="profile-link" href="https://github.com/Asherz96/Personal-Portfolio-pt.-2" target="_blank" class="btn contact-details"><i class="fab fa-github">GitHub</i>
-</a>
-<a id="profile-link" href="https://www.facebook.com" target="_blank" class="btn contact-details"><i class="fab fa-facebook-square">Facebook</i>
-</a>
-<a id="profile-link" href="https://twitter.com/?lang=en" target="_blank" class="btn contact-details"><i class="fab fa-twitter">Twitter</i>
-</a>
-<a id="profile-link" href="mailto:example@example.com" target="_blank" class="btn contact-details"><i class="fas fa-at">Email</i>
-</a>
-<a id="profile-link" href="tel:801-523-8035" target="_blank" class="btn contact-details"><i class="fas fa-mobile-alt">Phone</i>
-</a>
-</div>
+        <h1> Let's work together!</h1>
+        <h4>Take your pick...</h4>
+        <div class="contactlinks">
+            <a class="btn contact-details" id="profile-link" href="https://github.com/Asherz96/Personal-Portfolio-pt.-2"
+                target="_blank"><i class="fab fa-github"></i> GitHub
+            </a>
+            <a class="btn contact-details" href="https://www.facebook.com" target="_blank"><i
+                    class="fab fa-facebook-square"></i> Facebook
+            </a>
+            <a class="btn contact-details" href="https://twitter.com/?lang=en" target="_blank"><i
+                    class="fab fa-twitter"></i> Twitter
+            </a>
+            <a class="btn contact-details" href="mailto:example@example.com" target="_blank"> <i class="fas fa-at"></i>
+                Email
+            </a>
+            <a class="btn contact-details" href="tel:222-222-2222" target="_blank"><i class="fas fa-mobile-alt"></i>
+                Phone
+            </a>
+        </div>
     </section>
     <footer>
         <p>** &copy This is just a fake portfolio. All the projects and contact details given
