--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <section id="projects">
         <h2>Take a look at some of my projects</h2>
         <div class="projecttiles">
-            <a href="#">
+            <a href="https://zealous-lewin-daa115.netlify.app">
                 <figure class="project-tile">
                     <img src="/Images pt2./Practice Page img.png" />
                     <figcaption>Interest Page</figcaption>
@@ -40,14 +40,14 @@
             </a>
             <a href="#">
                 <figure class="project-tile">
-                    <img src="/Images pt2./pokemon-pc-game-1-900x506.jpg" />
+                    <img src="/Images pt2./PokemonCharacters.jpg" />
                     <figcaption>Pokemon Party</figcaption>
                 </figure>
             </a>
             <a href="#">
                 <figure class="project-tile">
-                    <img src="Images pt2./games-art-gone-home-minimalism-loading-hd-wallpaper-preview.jpg" />
-                    <figcaption>Project captions goes here.</figcaption>
+                    <img src="/Images pt2./StarWars.jpg" />
+                    <figcaption>Star Wars Films</figcaption>
                 </figure>
             </a>
             <a href="#">
