--- a/Characters/index.html
+++ b/Characters/index.html
@@ -4,14 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="film-style.css" rel="stylesheet">
-    <title>Star Wars Posters</title>
+    <link href="style.css" rel="stylesheet"/>
+    <title>Star Wars Characters</title>
 </head>
 <body>
-    <h1>May the Force Be With You!</h1>
-    <main id="filmList">
-    </main>
-    <script src="film-script.js" type="module"></script>
+    <h1>Hey, my name is Grogu!</h1>
+    <script src="sw-characters.js" type="module"></script>
 </body>
-
 </html>
