--- a/Characters/index.html
+++ b/Characters/index.html
@@ -8,7 +8,9 @@
     <title>Star Wars Characters</title>
 </head>
 <body>
-    <h1>Hey, my name is Grogu!</h1>
+
+ <header></header>
+ <main></main>
     <script src="sw-characters.js" type="module"></script>
 </body>
 </html>
