--- a/index.html
+++ b/index.html
@@ -44,16 +44,16 @@
                     <figcaption>Pokemon Party</figcaption>
                 </figure>
             </a>
-            <a href="#">
+            <a href="/Films/" target="_blank">
                 <figure class="project-tile">
-                    <img src="/Images pt2./StarWars.jpg" />
+                    <img src="/Images pt2./https---dorksideoftheforce.com-files-2021-05-Star-Wars-Posters-composite.jpg" />
                     <figcaption>Star Wars Films</figcaption>
                 </figure>
             </a>
-            <a href="#">
+            <a href="/Characters/" target="_blank">
                 <figure class="project-tile">
-                    <img src="Images pt2./games-art-gone-home-minimalism-loading-hd-wallpaper-preview.jpg" />
-                    <figcaption>Project captions goes here.</figcaption>
+                    <img src="/Images pt2./StarWars.jpg" />
+                    <figcaption>Starwars Characters</figcaption>
                 </figure>
             </a>
             <a href="#">
