--- a/Starships/index.html
+++ b/Starships/index.html
@@ -4,20 +4,33 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
     <link href="style.css" rel="stylesheet">
     <title>Star Wars Starships</title>
 </head>
 <body>
-    <header>
+    <header>    
         <h1>Starships of Star Wars</h1>
     </header>
-    <main class="maincontainer">
+    <main class="mainContainer">
         <nav class="nav">
-            <ul class="navlist">
-            </ul>
+            <ul class="navList"></ul>
         </nav>
-        <section class="shipviewer"></section>
+        <section class="shipViewer"></section>
     </main>
+
+   <!-- This is the HTML from Bulma for a modal component -->
+    <div class="modal">
+        <div class="modal-background"></div>
+        <div class="modal-content">
+            <div class="box">
+                <p></p>
+            </div>
+        </div>
+        <button class="modal-close is-large" aria-label="close"></button>
+      </div>
+    
+
     <footer>
         <p>&copy; Ashley Anderson Designs - 2022</p>
     </footer>
