Added imgs, styled ch,ss, c

--- a/Films/index.html
+++ b/Films/index.html
@@ -4,13 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com"> 
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+<link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
     <link href="film-style.css" rel="stylesheet">
     <title>Star Wars Posters</title>
 </head>
 <body>
-    <h1>May the Force Be With You!</h1>
+    <h1>Star Wars Film Posters</h1>
     <main id="filmList">
     </main>
+    <footer>
+        <p>&copy; Ashley Anderson Designs - 2022</p>
+    </footer>
     <script src="film-script.js" type="module"></script>
 </body>
 
