--- a/Starships/index.html
+++ b/Starships/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com"> 
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+<link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
     <link href="style.css" rel="stylesheet">
     <title>Star Wars Starships</title>
 </head>
@@ -34,6 +37,7 @@
     <footer>
         <p>&copy; Ashley Anderson Designs - 2022</p>
     </footer>
+    </head>
     <script src="sw-starships.js" type="module"></script>
 </body>
 </html>
