--- a/index.html
+++ b/index.html
@@ -38,12 +38,6 @@
                     <figcaption>Interest Page</figcaption>
                 </figure>
             </a>
-            <a href="#">
-                <figure class="project-tile">
-                    <img src="/Images pt2./PokemonCharacters.jpg" />
-                    <figcaption>Pokemon Party</figcaption>
-                </figure>
-            </a>
             <a href="/Films/" target="_blank">
                 <figure class="project-tile">
                     <img src="/Images pt2./https---dorksideoftheforce.com-files-2021-05-Star-Wars-Posters-composite.jpg" />
@@ -53,22 +47,27 @@
             <a href="/Characters/" target="_blank">
                 <figure class="project-tile">
                     <img src="/Images pt2./StarWars.jpg" />
-                    <figcaption>Starwars Characters</figcaption>
+                    <figcaption>Star Wars Characters</figcaption>
+                </figure>
+            </a>
+            <a href="/Starships/" target="_blank">
+                <figure class="project-tile">
+                    <img src="/Images pt2./wired_each-and-every-starfighter-in-star-wars-explained.jpg" />
+                    <figcaption>Star Wars Starships</figcaption>
+                </figure>
+            </a>
+            <a href="/Congress/" target="_blank">
+                <figure class="project-tile">
+                    <img src="/Images pt2./JS090219Congress_HeroT.jpg" />
+                    <figcaption>Congress Members</figcaption>
                 </figure>
             </a>
             <a href="#">
                 <figure class="project-tile">
-                    <img src="Images pt2./games-art-gone-home-minimalism-loading-hd-wallpaper-preview.jpg" />
-                    <figcaption>Project captions goes here.</figcaption>
+                    <img src="/Images pt2./PokemonCharacters.jpg" />
+                    <figcaption>Pokemon</figcaption>
                 </figure>
             </a>
-            <a href="#">
-                <figure class="project-tile">
-                    <img src="Images pt2./games-art-gone-home-minimalism-loading-hd-wallpaper-preview.jpg" />
-                    <figcaption>Project captions goes here.</figcaption>
-                </figure>
-            </a>
-
         </div>
     </section>
     <section id="contact">
