--- a/Characters/index.html
+++ b/Characters/index.html
@@ -4,12 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com"> 
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
     <link href="style.css" rel="stylesheet"/>
     <title>Star Wars Characters</title>
 </head>
 <body>
- <header></header>
+<h1>Characters of Star Wars</h1>
+ <header>
+ </header>
  <main></main>
+ <footer>
+    <p>&copy; Ashley Anderson Designs - 2022</p>
+</footer>
     <script src="sw-characters.js" type="module"></script>
 </body>
 </html>
