--- a/Congress/index.html
+++ b/Congress/index.html
@@ -10,6 +10,8 @@
 <body>
     <header>
     <h1>Members of Congress</h1>
+    <h3 class="seniority"></h3>
+  <ul class="loyaltyList"></ul>
 </header>
 <main>
     <div class="senatorsDiv">
