--- a/Pokemon/index.html
+++ b/Pokemon/index.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="style.css" rel="stylesheet">
-    <title>Pokemon Cards</title>
+    <title>Pokeman Cards</title>
 </head>
 <body>
     <header></header>
   <main>
-    <div class="pokegrid"></div>
+    <div class="pokeGrid"></div>
   </main>
   <footer></footer>
   <script src="pokecode.js" type="module"></script>
