Styling congress page

--- a/Congress/index.html
+++ b/Congress/index.html
@@ -11,6 +11,7 @@
     <header>
     <h1>Members of Congress</h1>
     <h3 class="seniority"></h3>
+    <p>Members with the Most Loyalty to Party</p>
   <ul class="loyaltyList"></ul>
 </header>
 <main>
