--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     <figcaption>Congress Members</figcaption>
                 </figure>
             </a>
-            <a href="#">
+            <a href="/Pokemon/">
                 <figure class="project-tile">
                     <img src="/Images pt2./PokemonCharacters.jpg" />
                     <figcaption>Pokemon</figcaption>
