--- a/Pokemon/index.html
+++ b/Pokemon/index.html
@@ -5,14 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="style.css" rel="stylesheet">
-    <title>Pokeman Cards</title>
+    <title>Pokemon Cards</title>
 </head>
 <body>
     <header></header>
   <main>
     <div class="pokeGrid"></div>
   </main>
-  <footer></footer>
+  <footer> 
+    <h3>&copy; Ashley Anderson Designs, 2022</h3>
+  </footer>
   <script src="pokecode.js" type="module"></script>
 </body>
 </html>
