--- a/Congress/index.html
+++ b/Congress/index.html
@@ -13,6 +13,7 @@
     <h3 class="seniority"></h3>
     <p>Members with the Most Loyalty to Party</p>
   <ul class="loyaltyList"></ul>
+  <div class="buttonsDiv"></div>
 </header>
 <main>
     <div class="senatorsDiv">
