Customizing more pokemon elemets

--- a/Pokemon/index.html
+++ b/Pokemon/index.html
@@ -13,7 +13,8 @@
 </head>
 <body>
     <header>
-      <h2>Pokemon</h2>
+      <h1>&boxH; Pokemon &boxH;</h1>
+      <h2>Gotta Catch'em All</h2>
     </header>
   <main>
     <div class="pokeGrid"></div>
