--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <section id="welcome-section">
         <h1>My name is Ashley</h1>
-        <h3>a UX/UI Designer</h3>
+        <h3>a UX/UI design student at Utah Valley University</h3>
     </section>
     <section id="projects">
         <h2>Take a look at some of my projects</h2>
@@ -64,7 +64,7 @@
             </a>
             <a href="/Pokemon/">
                 <figure class="project-tile">
-                    <img src="/Images pt2./PokemonCharacters.jpg" />
+                    <img src="/Images pt2./pokemonwalpaper.jpeg" />
                     <figcaption>Pokemon</figcaption>
                 </figure>
             </a>
