--- a/Pokemon/index.html
+++ b/Pokemon/index.html
@@ -7,6 +7,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com"> 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
     <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;500;600;700;800;900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Erica+One&family=Gochi+Hand&family=Luckiest+Guy&family=Press+Start+2P&display=swap" rel="stylesheet">
     <link href="style.css" rel="stylesheet">
    
     <title>Pokemon Cards</title>
@@ -14,7 +17,7 @@
 <body>
     <header>
       <h1>&boxH; Pokemon &boxH;</h1>
-      <h2>Gotta Catch'em All</h2>
+      <h2>Gotta Catch 'Em All!</h2>
     </header>
   <main>
     <div class="pokeGrid"></div>
