--- a/Pokemon/index.html
+++ b/Pokemon/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <header>
-      <h1>&boxH; Pokemon &boxH;</h1>
+      <h1>Pokemon</h1>
       <h2>Gotta Catch 'Em All!</h2>
     </header>
   <main>
