--- a/Pokemon/index.html
+++ b/Pokemon/index.html
@@ -17,7 +17,29 @@
 <body>
     <header>
       <h1>Pokemon</h1>
-      <h2>Gotta Catch 'Em All!</h2>
+      <selsct class="typeSelect">
+        <option>---Choose a Pokemon Type---</option>
+        <option>Bug</option>
+        <option>Dark</option>
+        <option>Dragon</option>
+        <option>Electric</option>
+        <option>Fairy</option>
+        <option>Fighting</option>
+        <option>Fire</option>
+        <option>Flying</option>
+        <option>Ghost</option>
+        <option>Grass</option>
+        <option>Ground</option>
+        <option>Ice</option>
+        <option>Normal</option>
+        <option>Pshychic</option>
+        <option>Poison</option>
+        <option>Rock</option>
+        <option>Dark</option>
+        <option>Steel</option>
+        <option>Water</option>
+        <h2 class="messageArea"></h2>
+      </selsct>
     </header>
   <main>
     <div class="pokeGrid"></div>
