Some final touches

--- a/Characters/index.html
+++ b/Characters/index.html
@@ -12,8 +12,7 @@
 </head>
 <body>
 <h1>Characters of Star Wars</h1>
- <header>
- </header>
+ <header></header>
  <main></main>
  <footer>
     <p>&copy; Ashley Anderson Designs - 2022</p>
