--- a/Congress/index.html
+++ b/Congress/index.html
@@ -16,9 +16,9 @@
   <div class="buttonsDiv"></div>
 </header>
 <main>
-    <div class="senatorsDiv">
+    <div class="senatorsDiv"></div>
+    <!-- <div class="representativesDiv"></div> -->
   
-    </div>
   </main>
   <footer>
     <h3>&copy; Ashley Anderson Designs, 2022</h3>
