--- a/Films/index.html
+++ b/Films/index.html
@@ -11,7 +11,7 @@
     <title>Star Wars Posters</title>
 </head>
 <body>
-    <h1>Star Wars Film Posters</h1>
+    <h1>Star Wars Films</h1>
     <main id="filmList">
     </main>
     <footer>
