--- a/Pokemon/index.html
+++ b/Pokemon/index.html
@@ -17,7 +17,8 @@
 <body>
     <header>
       <h1>Pokemon</h1>
-      <selsct class="typeSelect">
+      <div class="selectionMenu">
+      <select class="typeSelect">
         <option>---Choose a Pokemon Type---</option>
         <option>Bug</option>
         <option>Dark</option>
@@ -39,13 +40,15 @@
         <option>Steel</option>
         <option>Water</option>
         <h2 class="messageArea"></h2>
-      </selsct>
+      </select>
+    </div>
+    <div class="pokeButtons"></div>
     </header>
   <main>
     <div class="pokeGrid"></div>
   </main>
   <footer> 
-    <h3>&copy; Ashley Anderson Designs, 2022</h3>
+    <p>&copy; Ashley Anderson Designs, 2022</p>
   </footer>
   <script src="pokecode.js" type="module"></script>
 </body>
