--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
         integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous" />
-    <title>Ashley Anderson Portfolio</title>
+    <title>Ashley Anderson's Portfolio</title>
 
 </head>
 
@@ -59,7 +59,7 @@
             <a href="/Congress/" target="_blank">
                 <figure class="project-tile">
                     <img src="/Images pt2./JS090219Congress_HeroT.jpg" />
-                    <figcaption>Congress Members</figcaption>
+                    <figcaption>United States Congress</figcaption>
                 </figure>
             </a>
             <a href="/Pokemon/">
@@ -92,7 +92,7 @@
         </div>
     </section>
     <footer>
-        <p>** &copy This is just a fake portfolio. All the projects and contact details given
+        <p>** &copy Ashley Anderson Designs, 2022, All the projects and contact details given
             are not real. All rights reserved.**</p>
     </footer>
 </body>
