fixed critiques, edited main page

--- a/Characters/index.html
+++ b/Characters/index.html
@@ -15,7 +15,7 @@
  <header></header>
  <main></main>
  <footer>
-    <p>&copy; Ashley Anderson Designs - 2022</p>
+    <p>&copy;Ashley Anderson Designs, 2022. All rights reserved.</p>
 </footer>
     <script src="sw-characters.js" type="module"></script>
 </body>
