--- a/Congress/index.html
+++ b/Congress/index.html
@@ -21,7 +21,7 @@
   
   </main>
   <footer>
-    <h3>&copy; Ashley Anderson Designs, 2022</h3>
+    <h3>&copy;Ashley Anderson Designs, 2022. All rights reserved.</h3>
   </footer>
 <script src="congress.js" type="module"></script>
 </body>
