--- a/Pokemon/index.html
+++ b/Pokemon/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <header>
-      <h1>Pokemon</h1>
+    <img src="/Pokemon/ImagesP/pokemon logo.png" alt="logo">
       <div class="selectionMenu">
       <select class="typeSelect">
         <option>---Choose a Pokemon Type---</option>
@@ -36,7 +36,6 @@
         <option>Pshychic</option>
         <option>Poison</option>
         <option>Rock</option>
-        <option>Dark</option>
         <option>Steel</option>
         <option>Water</option>
         <h2 class="messageArea"></h2>
@@ -48,7 +47,7 @@
     <div class="pokeGrid"></div>
   </main>
   <footer> 
-    <p>&copy; Ashley Anderson Designs, 2022</p>
+    <p>&copy;Ashley Anderson Designs, 2022. All rights reserved.</p>
   </footer>
   <script src="pokecode.js" type="module"></script>
 </body>
