--- a/Starships/index.html
+++ b/Starships/index.html
@@ -35,7 +35,7 @@
     
 
     <footer>
-        <p>&copy; Ashley Anderson Designs - 2022</p>
+        <p>&copy;Ashley Anderson Designs, 2022. All rights reserved.</p>
     </footer>
     </head>
     <script src="sw-starships.js" type="module"></script>
