--- a/Films/index.html
+++ b/Films/index.html
@@ -15,7 +15,7 @@
     <main id="filmList">
     </main>
     <footer>
-        <p>&copy; Ashley Anderson Designs - 2022</p>
+        <p>&copy;Ashley Anderson Designs, 2022. All rights reserved.</p>
     </footer>
     <script src="film-script.js" type="module"></script>
 </body>
