--- a/index.html
+++ b/index.html
@@ -92,8 +92,7 @@
         </div>
     </section>
     <footer>
-        <p>** &copy Ashley Anderson Designs, 2022, All the projects and contact details given
-            are not real. All rights reserved.**</p>
+        <p>&copy;Ashley Anderson Designs, 2022. All rights reserved.</p>
     </footer>
 </body>
 
