Made some final updates

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <section id="projects">
         <h2>Take a look at some of my projects</h2>
         <div class="projecttiles">
-            <a href="https://zealous-lewin-daa115.netlify.app">
+            <a href="https://zealous-lewin-daa115.netlify.app" target="_blank">
                 <figure class="project-tile">
                     <img src="/Images pt2./Practice Page img.png" />
                     <figcaption>Interest Page</figcaption>
@@ -62,7 +62,7 @@
                     <figcaption>United States Congress</figcaption>
                 </figure>
             </a>
-            <a href="/Pokemon/">
+            <a href="/Pokemon/" target="_blank">
                 <figure class="project-tile">
                     <img src="/Images pt2./pokemonwalpaper.jpeg" />
                     <figcaption>Pokemon</figcaption>
